# safepipe

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  template_dsl.rs
crates/cli/tests/: cli.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/spec/: Cargo.toml
crates/spec/src/: lib.rs
docs/: LLM_DSL_REFERENCE.md
examples/: file_and_stdin_demo.spt  run_file_and_stdin_demo.sh  run_safe_awk_extract_demo.sh  run_stdin_prompt_demo.sh  run_system_context_demo.sh  run_template_server.sh  safe_awk_extract.spt  stdin_prompt.spt  stop_template_server.sh  system_context.spt
