[workspace]
members = ["crates/core", "crates/spec", "crates/cli"]
resolver = "2"
default-members = ["crates/cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.79"

[workspace.dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
unicode-normalization = "0.1.25"
