[package]
name = "safepipe"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "safepipe"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
thiserror.workspace = true
safepipe-core = { path = "../core" }
safepipe-spec = { path = "../spec" }
