[package]
name = "safepipe"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "safepipe"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono = { version = "0.4.42", default-features = true, features = ["clock"] }
dirs = "6.0.0"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "rustls-tls"] }
sha2 = "0.10.9"
libc = "0.2.177"
safepipe-core = { path = "../core" }
safepipe-spec = { path = "../spec" }

[dev-dependencies]
tempfile = "3.23.0"
