[package]
name = "safepipe-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
regex.workspace = true
serde_json.workspace = true
thiserror.workspace = true
unicode-normalization.workspace = true
safepipe-spec = { path = "../spec" }
